--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,19 @@
 /* || FONT LINK (work sans) */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&family=Space+Mono:wght@400;700&family=Work+Sans:wght@400;500;600;700;800&display=swap");
 
-body {
-  font-family: Arial;
-  font-size: 19px;
-  line-height: 1.5em;
+/* || RESET */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
 
 :root {
   /* || THEME COLORS */
-  --clr-primary: linear-gradient(90deg, #ff42a5 0%, #ff42a5 100%);
+  --clr-primary-gradient: linear-gradient(90deg, #ff42a5 0%, #ff42a5 100%);
+  --clr-primary: #ff42af 0%;
   --clr-secondary: #4ec5f7;
   --title-gradient: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
   --clr-black: #0b0223;
@@ -24,6 +28,22 @@ body {
   --fw-600: 600;
   --fw-700: 700;
   --fw-800: 800;
+  --lh-normal: 1.5;
+  --lh--hard: 1.1;
+}
+
+.clr-primary {
+  color: var(--clr-primary);
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: var(--ff);
+  font-size: 1.6rem;
+  line-height: var(--lh-normal);
 }
 
 /* || REUSABLE STYLES FOR HEADINGS */
@@ -62,6 +82,11 @@ h6 {
   font-size: 19px;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+}
+
 /* || CUSTOM BUTTON STYLES */
 .cta {
   background-color: var(--clr-primary);
@@ -90,14 +115,14 @@ h6 {
 .box-shadow {
   box-shadow: 0px 0px 6.25px 6.25px rgba(0, 0, 0, 0.03);
 }
-/* ================ */
+/* ======== centering text ======== */
 .txt-center {
   text-align: center;
 }
 
 /* || DT - Desktop */
 .container {
-  max-width: 1200px;
+  max-width: 1400px;
   margin: 0 auto;
   padding: 0 10px;
 }
@@ -118,4 +143,71 @@ main {
   margin-top: 50px;
 }
 
+.flex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
 /* ========================= header ============================== */
+
+.header__nav {
+  justify-content: space-around;
+  height: 80px;
+}
+
+.nav__logo {
+  width: 50px;
+}
+
+.gamer {
+  font-weight: var(--fw-700);
+  font-size: 2rem;
+}
+
+.nav__list {
+  gap: 3rem;
+}
+
+.nav__link {
+  color: var(--clr-black);
+}
+
+.special {
+  border-radius: 8px;
+  background: rgba(11, 2, 35, 0.1);
+  padding: 5px 15px;
+}
+
+.nav__link-icons > i {
+  font-size: 1.7rem;
+}
+
+.nav__link-icons > .fa-youtube {
+  color: #ff0000;
+  font-size: 2rem;
+}
+
+/* || TM - Tablet (portrait) */
+@media (max-width: 768px) {
+  html {
+    font-size: 55%;
+  }
+
+  .container {
+    width: 100%;
+  }
+}
+
+/* || MOBILE DEVICE */
+@media (max-width: 576px) {
+  .header__nav,
+  .nav__list {
+    flex-direction: column;
+  }
+
+  .header__nav {
+    margin-top: 7rem;
+  }
+}
