--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@
 :root {
   /* || THEME COLORS */
   --clr-primary-gradient: linear-gradient(90deg, #ff42a5 0%, #ff42a5 100%);
-  --clr-primary: #ff42af 0%;
+  --clr-primary: #ff42af;
   --clr-secondary: #4ec5f7;
   --title-gradient: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
   --clr-black: #0b0223;
@@ -44,6 +44,7 @@ body {
   font-family: var(--ff);
   font-size: 1.6rem;
   line-height: var(--lh-normal);
+  min-width: 300px;
 }
 
 /* || REUSABLE STYLES FOR HEADINGS */
@@ -94,8 +95,9 @@ img {
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
-  font-size: 16px;
+  font-size: 1.5rem;
   cursor: pointer;
+  margin-block: 5px;
 }
 
 .cta:hover {
@@ -122,7 +124,7 @@ img {
 
 /* || DT - Desktop */
 .container {
-  max-width: 1400px;
+  max-width: 1000px;
   margin: 0 auto;
   padding: 0 10px;
 }
@@ -150,11 +152,12 @@ main {
   gap: 10px;
 }
 
-/* ========================= header ============================== */
+/* ========================= || HEADER SECTION STYLES============================== */
 
 .header__nav {
-  justify-content: space-around;
+  justify-content: space-between;
   height: 80px;
+  margin: 0 4rem;
 }
 
 .nav__logo {
@@ -189,6 +192,54 @@ main {
   font-size: 2rem;
 }
 
+/*==================== || BANNER SECTION STYLES ================= */
+.banner {
+  justify-content: space-between;
+  padding: 0 20px;
+}
+
+.banner__content {
+  flex-shrink: 0;
+}
+
+.banner__h3-title {
+  color: var(--clr-black);
+  font-family: Work Sans;
+  font-size: 3rem;
+  font-weight: var(--fw-600);
+  text-transform: uppercase;
+}
+
+.banner__h1-title {
+  background: var(--title-gradient);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 4rem;
+  font-weight: var(--fw-800);
+  margin: 10px 0;
+}
+
+.banner__instructions {
+  margin: 20px 0;
+}
+
+.banner__instructions > * {
+  margin: 1rem 0;
+}
+.banner__item {
+  justify-content: flex-start;
+}
+
+.banner__btn--secondary {
+  background-color: var(--clr-secondary);
+  margin-left: 10px;
+}
+
+.banner__img {
+  flex-basis: 50%;
+  flex-shrink: 0;
+}
+/* ============================ || BREAKPOINTS ===================== */
 /* || TM - Tablet (portrait) */
 @media (max-width: 768px) {
   html {
@@ -197,6 +248,24 @@ main {
 
   .container {
     width: 100%;
+  }
+
+  .banner {
+    padding: 0;
+    flex-direction: column-reverse;
+    row-gap: 100px;
+    align-items: flex-start !important;
+  }
+
+  .banner__content {
+    background-color: rgba(227, 48, 140, 0.079);
+    width: 100%;
+    padding: 2rem;
+  }
+  .banner__img {
+    margin-top: 5rem;
+    width: 70%;
+    margin-inline: auto;
   }
 }
 
@@ -209,5 +278,16 @@ main {
 
   .header__nav {
     margin-top: 7rem;
+  }
+
+  .banner__img {
+    width: 100%;
+    margin-top: 15rem;
+  }
+}
+
+@media (max-width: 400px) {
+  body {
+    font-size: 10px !important;
   }
 }
