--- a/styles/style.css
+++ b/styles/style.css
@@ -42,6 +42,18 @@
   -webkit-text-fill-color: transparent;
 }
 
+.text-fff {
+  color: #fff !important;
+}
+
+.txt-gray {
+  color: var(--footer-light-txt);
+}
+
+.lh-normal {
+  line-height: 2;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -60,8 +72,8 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Arial;
   font-weight: 700;
+  color: #000000;
   line-height: 1.4em;
 }
 
@@ -86,7 +98,7 @@ h5 {
 }
 
 h6 {
-  font-size: 19px;
+  font-size: 13px;
 }
 
 img {
@@ -120,9 +132,6 @@ img {
 
 /* ============ */
 
-.box-shadow {
-  box-shadow: 0px 0px 6.25px 6.25px rgba(0, 0, 0, 0.03);
-}
 /* ======== centering text ======== */
 .txt-center {
   text-align: center;
@@ -162,8 +171,11 @@ main {
   margin: 8rem auto;
 }
 
-/* ========================= || HEADER SECTION STYLES============================== */
+.mg-bottom {
+  margin-bottom: 2rem;
+}
 
+/* ========================= || HEADER SECTION STYLES============================== */
 .header__nav {
   justify-content: space-between;
   height: 80px;
@@ -262,13 +274,14 @@ main {
   text-align: left;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 15px;
+  gap: 20px;
   margin-top: 4rem;
 }
 
 .adventure__card {
   box-shadow: 1px 2px 10px rgba(8, 7, 7, 0.181);
   border-radius: 10px;
+  transition: all 0.3s linear;
 }
 
 .adventure__card P {
@@ -295,10 +308,10 @@ main {
 
 .card-overlay {
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 0%;
   background-color: rgba(0, 0, 0, 0.5);
   opacity: 0;
   transition: all 0.3s;
@@ -306,6 +319,7 @@ main {
 
 .adventure__card:hover .card-overlay {
   opacity: 1;
+  height: 100%;
 }
 
 .adventure__card img {
@@ -332,11 +346,8 @@ main {
   align-items: center;
 }
 
-.adventure__card:hover .description {
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-  color: #fff;
+.adventure__card:hover {
+  outline: 2px solid var(--clr-primary);
 }
 
 .play-icon {
@@ -379,6 +390,112 @@ main {
   width: clamp(180px, 5vh, 250px);
 }
 /* ============  NO DOWNLOAD STYLES ENDS==================== */
+/* ============  ADVENTURE ACTION STYLES STARTS==================== */
+.adventure-action {
+  background: linear-gradient(
+    90deg,
+    rgba(255, 66, 165, 0.03) 0%,
+    rgba(255, 66, 165, 0.03) 100%
+  );
+  padding: 5rem 0;
+}
+
+.adventure-action-wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 1rem;
+}
+
+.adventure__col img {
+  width: 35px;
+}
+.adventure__col {
+  padding: 1rem;
+  border-radius: 40px;
+  transition: all 0.3s linear;
+}
+
+.adventure__col:hover {
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 0 0 2px var(--clr-primary);
+  transition: box-shadow 0.3s linear;
+}
+
+/* ============  ADVENTURE ACTfOPM STYLES ENDS==================== */
+/* ============  FOOTER STYLES STARTS==================== */
+.footer {
+  background-color: var(--footer-bg);
+  padding: 5rem 0;
+  font-size: 15px;
+}
+
+.footer__logo {
+  width: 7rem;
+  height: 10rem;
+}
+
+.inner-footer > * {
+  margin: 1rem;
+}
+
+.footer__list {
+  gap: 4em;
+  margin: 3rem 0;
+}
+
+.social-icons {
+  text-align: center;
+  gap: 3rem;
+  margin: 5rem 0;
+}
+
+.social-icons ul li a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-icons > * {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2.8rem;
+  background-color: #ffffff17;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+  gap: 2rem;
+}
+
+.fa-youtube {
+  color: #ff0101;
+}
+
+.fa-instagram {
+  background: linear-gradient(
+    to right,
+    #405de6,
+    #5851db,
+    #833ab4,
+    #c13584,
+    #e1306c,
+    #fd1d1d
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+.fa-twitter {
+  color: #1da1f2 !important;
+}
+
+.footer__list > *,
+.social-icons > * {
+  justify-self: center;
+}
+
+/* ============  FOOTER STYLES ENDS==================== */
 
 /* ============================ || BREAKPOINTS ===================== */
 /* || TM - Tablet (portrait) */
@@ -390,6 +507,8 @@ main {
   .container {
     width: 100%;
   }
+
+  /* =========== banner area ============ */
 
   .banner,
   .no-download {
@@ -411,7 +530,8 @@ main {
     margin-inline: auto;
   }
 
-  /* NO DOWNLOADS */
+  /* =========== no download area ============ */
+
   .no-download__content {
     padding: 6.5rem 2rem;
     background-color: rgba(227, 48, 140, 0.079);
@@ -426,9 +546,52 @@ main {
     left: -15rem;
     width: 60%;
   }
+
+  /* =========== footer area ============ */
+  .inner-footer {
+    width: 70%;
+    margin: 0 auto;
+  }
+
+  .inner-footer > * {
+    margin: 5rem 0;
+  }
+
+  .footer__list,
+  .social-icons {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    align-items: center;
+    column-gap: 1rem;
+    row-gap: 2rem;
+  }
+
+  .terms {
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+  }
+
+  .terms > * {
+    text-align: center;
+  }
+  .social-icons > * {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    background-color: #ffffff17;
+    width: 5rem;
+    height: 5rem;
+    border-radius: 50%;
+    gap: 2rem;
+  }
 }
+
 /* || MOBILE DEVICE */
 @media (max-width: 576px) {
+  /* =========== header area ============ */
+
   .header__nav,
   .nav__list {
     flex-direction: column;
@@ -443,7 +606,8 @@ main {
     margin-top: 15rem;
   }
 
-  /* Online game */
+  /* =========== online game area ============ */
+
   .adventure__card-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
@@ -453,7 +617,8 @@ main {
     width: 100%;
     margin-bottom: 3rem;
   }
-  /* NO DOWNLOADS */
+
+  /* =========== no download area ============ */
 
   .no-download .no-download__img-wrapper {
     width: 80%;
@@ -465,14 +630,47 @@ main {
     width: 70%;
     margin-left: 5rem;
   }
+
+  /* =========== Adventure action / gaming hub ============ */
+
+  .adventure-action-wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+  }
+
+  .adventure__col {
+    padding: 0.2rem 1rem;
+    border-radius: 4px;
+  }
+
+  .adventure__col img {
+    width: 22px;
+  }
+
+  h6 {
+    font-size: 10px;
+  }
+
+  /* ============ footer area ============= */
+  .footer > * {
+    font-size: 1.5rem;
+  }
+
+  .footer__copywright {
+    font-size: 1.3rem !important;
+  }
 }
+
+/* ============= 400 px Breakpoints ============== */
 
 @media (max-width: 400px) {
   body {
     font-size: 10px !important;
   }
 
-  /* Online game */
+  /* =========== online game area ============ */
+
   .adventure {
     text-align: left;
   }
@@ -481,9 +679,16 @@ main {
     margin-bottom: -0.1rem;
   }
 
-  /* no download */
+  /* =========== no download area ============ */
+
   .no-download .no-download__img-wrapper {
     width: 69%;
     margin-left: auto;
+  }
+
+  /* ============= footer area =============== */
+
+  .inner-footer {
+    justify-content: space-between;
   }
 }
