--- a/styles/style.css
+++ b/styles/style.css
@@ -224,6 +224,8 @@ main {
 
 .banner__content {
   background-image: url("/B8A2-Gamer-Zone-main/images/Group\ 14.png");
+  background-repeat: no-repeat;
+  background-size: cover;
   flex-shrink: 0;
   flex-basis: 50%;
   padding: 2rem;
@@ -297,7 +299,7 @@ main {
 .adventure__card img {
   width: 100%;
 }
-
+/* ============ || PLAY BUTTON STYLES ==================== */
 /* ============ || PLAY BUTTON STYLES ==================== */
 .adventure__card-container {
   display: flex;
@@ -335,6 +337,9 @@ main {
 .play-button {
   position: absolute;
   top: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 60px;
@@ -342,22 +347,54 @@ main {
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.2);
   cursor: pointer;
-  display: none;
+  visibility: hidden; /* Hide the play button initially */
+  pointer-events: none; /* Prevent clicks on hidden buttons */
 }
 
 .adventure__card:hover .play-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  visibility: visible; /* Show the play button on hover */
+  /* pointer-events: auto; Enable clicks on visible buttons */
 }
 
 .adventure__card:hover {
   outline: 2px solid var(--clr-primary);
 }
 
+.adventure__card:hover
+.description {
+  color:transparent;
+  transition: color 0.3s;
+}
+
+
 .play-icon {
-  font-size: 30px;
+  font-size: 28px;
   color: #fff;
+}
+
+/* Adjust the color and transition properties for a smooth effect */
+
+/* Add style for 'Watch now' text overlay */
+.card-overlay::after {
+  content: "Watch now";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 5rem;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 20px;
+  color: var(--clr-primary);
+  font-size: 1.8rem;
+  font-weight: var(--fw-500);
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.adventure__card-container:hover .card-overlay::after {
+  opacity: 1;
 }
 
 /* ============  PLAY BUTTON STYLES ENDS ==================== */
@@ -526,7 +563,7 @@ main {
 
 /* ============================ || BREAKPOINTS ===================== */
 /* || TM - Tablet (portrait) */
-@media (max-width: 768px) {
+@media (max-width: 900px) {
   html {
     font-size: 55%;
   }
