--- a/styles/style.css
+++ b/styles/style.css
@@ -134,9 +134,17 @@ img {
 
 /* ============ */
 
-/* ======== centering text ======== */
+/* ======== aligning text ======== */
 .txt-center {
   text-align: center;
+}
+
+.txt-left {
+  text-align: left;
+}
+
+.txt-right {
+  text-align: right;
 }
 
 /* || DT - Desktop */
@@ -167,6 +175,10 @@ main {
   align-items: center;
   justify-content: center;
   gap: 10px;
+}
+
+.flex-between {
+  justify-content: space-between;
 }
 
 .margin {
@@ -267,6 +279,34 @@ main {
 }
 
 /*==================== || BANNER SECTION STYLES ENDS ================= */
+
+/* ============  GAMER SECTION STYLES STARTS==================== */
+.we-gamer {
+  flex-wrap: wrap;
+  text-align: right;
+}
+.we-gamer > div {
+  flex-basis: 55%;
+}
+.we-gamer > article {
+  flex-basis: 40%;
+}
+
+.we-gamer__content .description {
+  font-size: 1.4rem;
+}
+.we-gamer__content .unleash-the-gamer {
+  font-size: 2.3rem;
+  color: #534c64;
+}
+
+b {
+  display: block;
+  margin: 0.5rem 0;
+}
+
+/* ============  GAMER SECTION STYLES ENDS==================== */
+
 /*==================== || ADVENTURE SECTION STYLES STARTS================= */
 
 .adventure {
@@ -280,7 +320,7 @@ main {
 .adventure__card-container {
   text-align: left;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   gap: 20px;
   margin-top: 4rem;
 }
@@ -289,6 +329,7 @@ main {
   box-shadow: 1px 2px 10px rgba(8, 7, 7, 0.181);
   border-radius: 10px;
   transition: all 0.3s linear;
+  justify-self: center;
 }
 
 .adventure__card P {
@@ -297,9 +338,8 @@ main {
 }
 
 .adventure__card img {
-  width: 100%;
 }
-/* ============ || PLAY BUTTON STYLES ==================== */
+
 /* ============ || PLAY BUTTON STYLES ==================== */
 .adventure__card-container {
   display: flex;
@@ -347,25 +387,22 @@ main {
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.2);
   cursor: pointer;
-  visibility: hidden; /* Hide the play button initially */
-  pointer-events: none; /* Prevent clicks on hidden buttons */
+  visibility: hidden;
+  pointer-events: none;
 }
 
 .adventure__card:hover .play-button {
-  visibility: visible; /* Show the play button on hover */
-  /* pointer-events: auto; Enable clicks on visible buttons */
+  visibility: visible;
 }
 
 .adventure__card:hover {
   outline: 2px solid var(--clr-primary);
 }
 
-.adventure__card:hover
-.description {
-  color:transparent;
+.adventure__card:hover .description {
+  color: transparent;
   transition: color 0.3s;
 }
-
 
 .play-icon {
   font-size: 28px;
@@ -466,6 +503,40 @@ main {
 }
 
 /* ============  ADVENTURE ACTfOPM STYLES ENDS==================== */
+/* ============  CAREERS STYLES STARTS==================== */
+.careers {
+  background-color: var(--clr-primary);
+  padding: 2rem 0;
+  border-radius:10px 10px;
+}
+
+.careers__inner-container,
+.careers__content h2,
+.careers__description {
+  color: #fff;
+  margin: 6px auto;
+}
+
+.careers__content {
+  flex-basis: 1000px;
+}
+
+.careers__description {
+  margin: 2rem 0;
+  color: #ececec;
+}
+
+.career__item {
+  font-size: 1.4rem;
+  padding: 0.3rem 0;
+}
+
+.careers__btn--primary {
+  background-color: #f0efef;
+  color: var(--clr-primary);
+  margin-top: 2rem;
+}
+/* ============  CAREERS SECTION STYLES ENDS==================== */
 /* ============  FOOTER STYLES STARTS==================== */
 .footer {
   background-color: var(--footer-bg);
@@ -540,26 +611,6 @@ main {
 }
 
 /* ============  FOOTER STYLES ENDS==================== */
-/* ============  GAMER SECTION STYLES STARTS==================== */
-.we-gamer {
-  flex-wrap: wrap;
-  text-align: right;
-}
-.we-gamer > div {
-  flex-basis: 55%;
-}
-.we-gamer > article {
-  flex-basis: 40%;
-}
-
-.we-gamer__content .description {
-  font-size: 1.4rem;
-}
-.we-gamer__content .unleash-the-gamer {
-  font-size: 2.3rem;
-  color: #534c64;
-}
-/* ============  GAMER SECTION STYLES ENDS==================== */
 
 /* ============================ || BREAKPOINTS ===================== */
 /* || TM - Tablet (portrait) */
@@ -575,7 +626,8 @@ main {
   /* =========== banner area ============ */
 
   .banner,
-  .no-download {
+  .no-download,
+  .careers__inner-container {
     padding: 0;
     flex-direction: column-reverse;
     row-gap: 100px;
@@ -616,7 +668,7 @@ main {
 
   /* =========== no download area ============ */
 
-  .no-download__content {
+  .no-download-sec {
     padding: 6.5rem 2rem;
     background-color: rgba(227, 48, 140, 0.079);
   }
@@ -631,6 +683,25 @@ main {
     width: 60%;
   }
 
+  /* ============== CAREERS ========== */
+  .careers__inner-container {
+    width: 80%;
+    flex-direction: column;
+    margin: 0 auto;
+  }
+
+  .no-download {
+    width: 80%;
+    margin: 0 auto;
+  }
+  .careers__content {
+    flex-basis: 0;
+  }
+
+  .careers__img-wrapper {
+    width: 80%;
+    margin: 0 auto;
+  }
   /* gaming  hub */
 
   .adventure-action-wrapper > * {
@@ -678,6 +749,14 @@ main {
   }
 }
 
+@media (max-width: 850px) {
+  .adventure__card-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 4rem 2rem;
+    justify-content: stretch;
+  }
+}
 /* || MOBILE DEVICE */
 @media (max-width: 576px) {
   /* =========== header area ============ */
@@ -728,6 +807,14 @@ main {
     margin-left: 5rem;
   }
 
+  /* =========== CAREERS ============ */
+  .no-download {
+    width: 100%;
+  }
+  .careers__inner-container {
+    padding: 0 1rem;
+    width: 100%;
+  }
   /* =========== Adventure action / gaming hub ============ */
 
   .adventure-action-wrapper {
