--- a/styles/style.css
+++ b/styles/style.css
@@ -148,7 +148,7 @@ img {
 
 /* DT - Desktop */
 .container {
-  max-width: 1000px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0 10px;
 }
@@ -316,10 +316,12 @@ b {
 }
 
 .adventure__card-container {
+  max-width: 1100px;
   text-align: left;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   gap: 20px;
+  margin-inline: auto;
   margin-top: 4rem;
 }
 
@@ -761,9 +763,12 @@ b {
   /* ONLINE GAME AREA */
   .adventure__card-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 4rem 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    column-gap: 6rem;
     justify-content: stretch;
+  }
+  .adventure__card {
+    width: 100%;
   }
 }
 
